--- a/Arimapage.html
+++ b/Arimapage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ARIMA_FORGER</title>
+  <title>𝚳𝚫𝐒𝚻𝚵𝚪𝚳𝚰𝚴𝐃</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -78,8 +78,8 @@
 
   <button onclick="window.open(`/arimaqr`)" class="btn">QR Code</button>
   <button onclick="window.open(`/pair`)" class="btn">Pair Code</button>
-  <button onclick="window.open(`github.com/Lordhades-qp/ARIMA-BOT`)" class="btn">Bot Repo</button>
-  <button onclick="window.open(`https://t.me/arima_x`)" class="btn">Contact Me</button>
+  <button onclick="window.open(`github.com/Lordhades-qp/MASTERMIND-V1`)" class="btn">Bot Repo</button>
+  <button onclick="window.open(`https://wa.me/2250565647864.`)" class="btn">Contact Me</button>
   <button onclick="window.open(`https://whatsapp.com/channel/0029VatUVBSHrDZcV6K0DH0I`)" class="btn">Wa Channel</button>
   
 
